--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -19,18 +19,18 @@
       "metadata": {
         "id": "V1g-E21RT8CO"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gorg-TjzXeal",
-        "outputId": "7bc9b98c-ae15-46bb-986a-b62109093d41"
+        "outputId": "afa92c58-db7f-4469-af1a-0edc0946168d"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -103,9 +103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xT1sXj9qUHmC",
-        "outputId": "6282a3a6-4d4a-4839-bac2-2051de10fd2d"
+        "outputId": "b8e42762-81b0-408a-d42c-d5956bb8b267"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,12 +359,12 @@
     {
       "cell_type": "code",
       "source": [
-        "def find_matchs(tournament_url,tournament_date):\n",
+        "def find_matchs(tournament_url,tournament_date,tournament_name):\n",
         "  \"\"\"\n",
         "  Takes a row of the df_tournament.csv and returns the different games\n",
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
-        "  if \"laver-cup\" in tournament_row[\"url\"] or \"atp-cup\" in tournament_row[\"url\"] or \"perth-sydney\" in tournament_row[\"url\"]:\n",
+        "  if \"laver-cup\" in tournament_url or \"atp-cup\" in tournament_url or \"perth-sydney\" in tournament_url:\n",
         "    return []\n",
         "  else:\n",
         "    tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_url.split('tournaments')[1].split(\"overview\")[0]+tournament_date.split('.')[0]+'/results'\n",
@@ -391,8 +391,8 @@
         "        # print(all_games_round)\n",
         "        for game_number in range(0,len(all_games_round),2):\n",
         "          game_dict={}\n",
-        "          game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
-        "          game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
+        "          game_dict[\"tournament_name\"]=tournament_name\n",
+        "          game_dict[\"tournament_date\"]=tournament_date\n",
         "          game_dict[\"round\"]=round_name.text\n",
         "          game_dict[\"winner_name\"]=all_games_round[game_number].text.strip()\n",
         "          game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
@@ -404,8 +404,8 @@
         "        round_tracker+=1\n",
         "    else:\n",
         "      game_dict={}\n",
-        "      game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
-        "      game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
+        "      game_dict[\"tournament_name\"]=tournament_name\n",
+        "      game_dict[\"tournament_date\"]=tournament_date\n",
         "      list_matchs_tournament.append(game_dict)\n",
         "    return list_matchs_tournament"
       ],
@@ -483,7 +483,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPaHMVLjX04565Gp17Sw44N",
+      "authorship_tag": "ABX9TyNITsQ7IdUzPjPIdiudA7o8",
       "include_colab_link": true
     },
     "kernelspec": {
