--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -19,12 +19,12 @@
       "metadata": {
         "id": "V1g-E21RT8CO"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,24 +57,12 @@
     {
       "cell_type": "code",
       "source": [
-        "import requests\n",
-        "import random\n",
-        "from bs4 import BeautifulSoup\n",
-        "\n",
-        "from datetime import datetime, timedelta\n",
-        "\n",
-        "import os\n",
-        "import io\n",
-        "# from github import Github\n",
-        "\n",
-        "import importlib.util\n",
-        "import nbformat\n",
-        "# import pandas"
+        "import re"
       ],
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 3,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -105,7 +93,7 @@
         "id": "xT1sXj9qUHmC",
         "outputId": "b8e42762-81b0-408a-d42c-d5956bb8b267"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,10 +348,8 @@
       "cell_type": "code",
       "source": [
         "def find_matchs(tournament_url,tournament_date,tournament_name):\n",
-        "  \"\"\"\n",
-        "  Takes a row of the df_tournament.csv and returns the different games\n",
-        "  \"\"\"\n",
-        "  list_matchs_tournament=[]\n",
+        "\n",
+        "  list_past_matchs_tournament=[]\n",
         "  if \"laver-cup\" in tournament_url or \"atp-cup\" in tournament_url or \"perth-sydney\" in tournament_url:\n",
         "    return []\n",
         "  else:\n",
@@ -398,7 +384,7 @@
         "          game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
         "\n",
         "          game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[game_tracker].text.strip().replace(\"\\r\\n\",''))\n",
-        "          list_matchs_tournament.append(game_dict)\n",
+        "          list_past_matchs_tournament.append(game_dict)\n",
         "          game_tracker+=1 #need to count the number of games\n",
         "\n",
         "        round_tracker+=1\n",
@@ -406,14 +392,78 @@
         "      game_dict={}\n",
         "      game_dict[\"tournament_name\"]=tournament_name\n",
         "      game_dict[\"tournament_date\"]=tournament_date\n",
-        "      list_matchs_tournament.append(game_dict)\n",
-        "    return list_matchs_tournament"
+        "      list_past_matchs_tournament.append(game_dict)\n",
+        "\n",
+        "    #add incoming games\n",
+        "    list_incoming_matchs_tournament=[]\n",
+        "    tournament_url_incoming=\"https://www.atptour.com/en/scores/current\"+tournament_url.split('tournaments')[1].split(\"overview\")[0]+'/daily-schedule'\n",
+        "    scrapping_tournament_incoming=html_elements_from_url(tournament_url_incoming,\"div\",['sectioned-day-tables'])[\"sectioned-day-tables\"]\n",
+        "    if len(scrapping_tournament_incoming)>0:\n",
+        "      scrapping_tournament_incoming=scrapping_tournament_incoming[0]\n",
+        "      all_games=scrapping_tournament_incoming.find_all(\"tbody\")[0].find_all('tr')\n",
+        "      for game in all_games:\n",
+        "        if len(game.find_all(\"td\",class_=\"day-table-round\"))>0:\n",
+        "          game_dict={}\n",
+        "          game_dict[\"tournament_name\"]=tournament_name\n",
+        "          game_dict[\"tournament_date\"]=tournament_date\n",
+        "          game_dict[\"round\"]=game.find_all(\"td\",class_=\"day-table-round\")[0].text.strip()\n",
+        "          game_dict[\"player_1_name\"]=game.find_all(\"a\")[0].text.strip()\n",
+        "          game_dict[\"player_2_name\"]=game.find_all(\"a\")[1].text.strip()\n",
+        "\n",
+        "          list_incoming_matchs_tournament.append(game_dict)\n",
+        "\n",
+        "    return list_past_matchs_tournament,list_incoming_matchs_tournament"
       ],
       "metadata": {
         "id": "-SCDJNk7h8GT"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "find_matchs(\"en/tournaments/paris/352/overview\",\"Paris\",\"2023.10.30\")[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JBeX09Hnhcdr",
+        "outputId": "2e9cf369-559c-4bee-be2d-9b8be136c93e"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'tournament_name': '2023.10.30',\n",
+              "  'tournament_date': 'Paris',\n",
+              "  'round': 'QF',\n",
+              "  'player_1_name': 'Hubert Hurkacz',\n",
+              "  'player_2_name': 'Grigor Dimitrov'},\n",
+              " {'tournament_name': '2023.10.30',\n",
+              "  'tournament_date': 'Paris',\n",
+              "  'round': 'QF',\n",
+              "  'player_1_name': 'Stefanos Tsitsipas',\n",
+              "  'player_2_name': 'Karen Khachanov'},\n",
+              " {'tournament_name': '2023.10.30',\n",
+              "  'tournament_date': 'Paris',\n",
+              "  'round': 'QF',\n",
+              "  'player_1_name': 'Novak Djokovic',\n",
+              "  'player_2_name': 'Holger Rune'},\n",
+              " {'tournament_name': '2023.10.30',\n",
+              "  'tournament_date': 'Paris',\n",
+              "  'round': 'QF',\n",
+              "  'player_1_name': 'Alex de Minaur',\n",
+              "  'player_2_name': 'Andrey Rublev'}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -483,7 +533,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNITsQ7IdUzPjPIdiudA7o8",
+      "authorship_tag": "ABX9TyP6VXhPls9CB++BkIYr+67T",
       "include_colab_link": true
     },
     "kernelspec": {
