--- a/workflow_notebooks/update_all_matchs.ipynb
+++ b/workflow_notebooks/update_all_matchs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfJYFnUcFiYxGMVpYt7jxz",
+      "authorship_tag": "ABX9TyNowuwifYkwWYZbFbTEksH9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/update_all_matchs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/workflow_notebooks/update_all_matchs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,9 +49,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oHh3Jgp5dHP_",
-        "outputId": "a2644e86-c694-4027-f410-d3396fd2b266"
+        "outputId": "1496c851-19cf-4285-a2f0-5b8ce05ea897"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,9 +97,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0GMw8_fEXOEX",
-        "outputId": "1ecd52da-f8f1-4182-a400-5f018f1fb9c2"
+        "outputId": "acaf6fb5-9f28-4f96-99e5-234f6758ad16"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,38 +130,53 @@
         "import re\n",
         "\n",
         "df_all_matchs=get_file_content(\"data/df_all_matchs.csv\")\n",
+        "df_incoming_matchs=get_file_content(\"data/df_incoming_matchs.csv\")\n",
         "df_tournaments=get_file_content(\"data/df_tournaments.csv\")\n",
         "\n",
         "df_tournaments=df_tournaments[(pd.to_datetime(df_tournaments['tournament_date'])>=(datetime.now()-timedelta(days=15)))&\n",
         "                              (pd.to_datetime(df_tournaments['tournament_date'])<=(datetime.now()+timedelta(days=15)))]\n",
         "\n",
         "list_matchs=[]\n",
+        "list_matchs_incoming=[]\n",
         "pct_tournaments=1\n",
         "nb_rows=int(pct_tournaments*len(df_tournaments))\n",
         "for index,row in tqdm(df_tournaments[:int(nb_rows)].iterrows(), total=nb_rows):\n",
-        "  list_matchs+=find_matchs(row)\n",
+        "  tournament_url=row[\"url\"]\n",
+        "  tournament_date=row[\"tournament_date\"]\n",
+        "  tournament_name=row[\"tournament_name\"]\n",
+        "  find_matchs_all=find_matchs(tournament_url,tournament_date,tournament_name)\n",
+        "  list_matchs+=find_matchs_all[0]\n",
+        "  list_matchs_incoming+=find_matchs_all[1]\n",
         "\n",
         "result = pd.merge(pd.DataFrame(list_matchs), df_all_matchs, how='left', indicator=True)\n",
         "rows_not_in_df_match = result[result['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
         "\n",
         "final_df=pd.concat([df_all_matchs,rows_not_in_df_match]).reset_index(drop=True)\n",
+        "incoming_games=pd.DataFrame(list_matchs_incoming)\n",
+        "incoming_games[\"date_added\"]=datetime.now().strftime('%d-%m-%Y')\n",
         "\n",
-        "add_file_github('data/df_all_matchs.csv',final_df.to_csv(index=False))"
+        "df_incoming_matchs=pd.concat([df_incoming_matchs,incoming_games]).reset_index(drop=True)\n",
+        "df_incoming_matchs=df_incoming_matchs.drop_duplicates([\"tournament_name\",\"tournament_date\",\"round\",\t\"player_1_name\",\"player_2_name\"])\n",
+        "\n",
+        "\n",
+        "\n",
+        "add_file_github('data/df_all_matchs.csv',final_df.to_csv(index=False))\n",
+        "add_file_github('data/df_incoming_matchs.csv',df_incoming_matchs.to_csv(index=False))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BnoVLxI-hrd0",
-        "outputId": "34e7bdc9-622e-4c2d-f44f-671fc3820a86"
+        "outputId": "337f50be-2279-4015-ee52-8bf2003ad18e"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 6/6 [00:13<00:00,  2.21s/it]\n"
+            "100%|██████████| 6/6 [00:08<00:00,  1.34s/it]\n"
           ]
         }
       ]
